build-logs.txt
-- Setting up grape
-- Mod okhx.grape is compiling for Geode version 5.7.1
-- Mod okhx.grape is compiling for Geometry Dash version 2.2081
| Info | Dependency 'geode.node-ids' found in cache
| Done | All dependencies resolved
-- Configuring done (36.1s)
-- Generating done (1.1s)
-- Build files have been written to: /home/ubuntu1/silicate/build-win
[ 11%] Built target Zycore
[ 27%] Built target Zydis
[ 35%] Built target safetyhook
[ 38%] Built target fmt
[ 40%] Built target asp
[ 41%] Built target qsox
[ 42%] Built target arc
[ 57%] Built target GeodeBindings
[ 57%] Building CXX object CMakeFiles/grape.dir/cmake_pch.cxx.obj
[ 58%] Building CXX object CMakeFiles/grape.dir/src/main.cpp.obj
[ 59%] Building CXX object CMakeFiles/grape.dir/src/bot/bot.cpp.obj
[ 60%] Building CXX object CMakeFiles/grape.dir/src/bot/updater.cpp.obj
[ 61%] Building CXX object CMakeFiles/grape.dir/src/bot/scheduler.cpp.obj
[ 62%] Building CXX object CMakeFiles/grape.dir/src/assist/autoclicker.cpp.obj
[ 62%] Building CXX object CMakeFiles/grape.dir/src/assist/hitboxes.cpp.obj
[ 63%] Building CXX object CMakeFiles/grape.dir/src/hooks/CCActionManager.cpp.obj
[ 64%] Building CXX object CMakeFiles/grape.dir/src/hooks/CCDirector.cpp.obj
[ 65%] Building CXX object CMakeFiles/grape.dir/src/hooks/CCScheduler.cpp.obj
[ 66%] Building CXX object CMakeFiles/grape.dir/src/hooks/EnhancedGameObject.cpp.obj
[ 67%] Building CXX object CMakeFiles/grape.dir/src/hooks/FMODAudioEngine.cpp.obj
[ 67%] Building CXX object CMakeFiles/grape.dir/src/hooks/GJBaseGameLayer.cpp.obj
[ 68%] Building CXX object CMakeFiles/grape.dir/src/hooks/GameObject.cpp.obj
[ 69%] Building CXX object CMakeFiles/grape.dir/src/hooks/LevelEditorLayer.cpp.obj
[ 70%] Building CXX object CMakeFiles/grape.dir/src/hooks/PauseLayer.cpp.obj
[ 71%] Building CXX object CMakeFiles/grape.dir/src/hooks/PlayLayer.cpp.obj
In file included from /home/ubuntu1/silicate/src/hooks/PlayLayer.cpp:19:
/home/ubuntu1/silicate/src/ui/touch_overlay.hpp(8,5): error: no type named 'CCMenuItemSpriteExtra' in namespace 'cocos2d'; did you mean simply 'CCMenuItemSpriteExtra'?
    8 |     cocos2d::CCMenuItemSpriteExtra* m_leftBtn;
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |     CCMenuItemSpriteExtra
/home/ubuntu1/silicate/build-win/bindings/bindings/Geode/binding/CCMenuItemSpriteExtra.hpp(12,7): note: 'CCMenuItemSpriteExtra' declared here
   12 | class CCMenuItemSpriteExtra : public cocos2d::CCMenuItemSprite {
      |       ^
In file included from /home/ubuntu1/silicate/src/hooks/PlayLayer.cpp:19:
/home/ubuntu1/silicate/src/ui/touch_overlay.hpp(9,5): error: no type named 'CCMenuItemSpriteExtra' in namespace 'cocos2d'; did you mean simply 'CCMenuItemSpriteExtra'?
    9 |     cocos2d::CCMenuItemSpriteExtra* m_rightBtn;
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |     CCMenuItemSpriteExtra
/home/ubuntu1/silicate/build-win/bindings/bindings/Geode/binding/CCMenuItemSpriteExtra.hpp(12,7): note: 'CCMenuItemSpriteExtra' declared here
   12 | class CCMenuItemSpriteExtra : public cocos2d::CCMenuItemSprite {
      |       ^
/home/ubuntu1/silicate/src/hooks/PlayLayer.cpp(459,22): error: no member named 'hide' in 'TouchOverlay'
  459 |             overlay->hide();
      |             ~~~~~~~  ^
/home/ubuntu1/silicate/src/hooks/PlayLayer.cpp(689,18): error: cannot initialize object parameter of type 'cocos2d::CCNode' with an expression of type 'TouchOverlay'
  689 |             if (!overlay->getParent()) {
      |                  ^~~~~~~
/home/ubuntu1/silicate/src/hooks/PlayLayer.cpp(690,23): error: no matching member function for call to 'addChild'
  690 |                 this->addChild(overlay, 1000);
      |                 ~~~~~~^~~~~~~~
/home/ubuntu1/GeodeSDK/loader/include/Geode/cocos/extensions/GUI/CCControlExtension/../../../include/../actions/../base_nodes/CCNode.h(606,18): note: candidate function not viable: no known conversion from 'TouchOverlay *' to 'CCNode *' for 1st argument
  606 |     virtual void addChild(CCNode * child, int zOrder);
      |                  ^        ~~~~~~~~~~~~~~
/home/ubuntu1/GeodeSDK/loader/include/Geode/cocos/extensions/GUI/CCControlExtension/../../../include/../actions/../base_nodes/CCNode.h(597,18): note: candidate function not viable: requires single argument 'child', but 2 arguments were provided
  597 |     virtual void addChild(CCNode * child);
      |                  ^        ~~~~~~~~~~~~~~
/home/ubuntu1/GeodeSDK/loader/include/Geode/cocos/extensions/GUI/CCControlExtension/../../../include/../actions/../base_nodes/CCNode.h(616,18): note: candidate function not viable: requires 3 arguments, but 2 were provided
  616 |     virtual void addChild(CCNode* child, int zOrder, int tag);
      |                  ^        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
5 errors generated.
gmake[2]: *** [CMakeFiles/grape.dir/build.make:319: CMakeFiles/grape.dir/src/hooks/PlayLayer.cpp.obj] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:374: CMakeFiles/grape.dir/all] Error 2
gmake: *** [Makefile:124: all] Error 2
| Fail | CMake build returned code 2